--- a/protfolio.css
+++ b/protfolio.css
@@ -7,7 +7,7 @@
 body {
     font-family: 'PT Sans', sans-serif;
     background-color: #fff;
-    font-size: 9px;
+    font-size: 10px;
 }
 
 header h1 {
@@ -17,14 +17,14 @@ header h1 {
     color:#000;
 }
 header h2 {
-    margin:10px 0 80px 0;
-    font-size:9px;
+    margin:10px 0 120px 0;
+    font-size:10px;
     color:#666;
 }
 
 section h1 {
     font-family: 'Open Sans Condensed', sans-serif;
-    margin:-20px 0 40px 0;
+    margin:-10px 0 40px 0;
     letter-spacing: 0.2em;
     font-size:30px;
     color:#000;
@@ -37,19 +37,33 @@ section h2 {
 section p {
     font-size: 11px;
 }
+section p a {
+    text-decoration: none;
+}
+section p a:link {
+    text-decoration: none;
+}
+section p a:visited {
+    text-decoration: none;
+}
+section p a:hover {
+    text-decoration: none;
+}
 
 
+footer p {
+    text-align: center;
+    font-size: 10px;
+    color:#666;
+}
 nav {
     margin:0;
     text-align: left;
-    font-size:10px;
 }
-
 nav ul li {
     margin: 0 2px;
     display: inline-block;
 }
-
 nav ul li a {
     text-decoration: none;
     color:#000;
@@ -71,4 +85,3 @@ nav ul li a:hover {
     border: 5px solid #eee;
     border-radius: 0px;
 }
-
